TestSuite/errors/err0043.pas
type TClass = class
procedure Test;
begin
end;
end;

constructor;
begin
end;

begin
end.